# Apptopia

./: .gitignore  AGENTS.md  ANALYSIS_REPORT.md  ISSUE_ANALYSIS.md  fetch_issues.py  issue_analysis.md
.github/ISSUE_TEMPLATE/: app-game.yml  app-tool.yml  config.yml
.github/workflows/: README.md  ci_17.yml  ci_18.yml  ci_19.yml  ci_2.yml  ci_27.yml  ci_3.yml  ci_35.yml  ci_36.yml  ci_42.yml  ci_45.yml  ci_8.yml  ci_example.yml.template  codex-issue-implementing.yml  codex-issue-planning.yml  issue-auto-labeler.lock.yml  issue-auto-labeler.md
apps/: README.md
apps/example/: README.md
apps/issue-17/: README.md  package-lock.json  package.json
apps/issue-18/: README.md  package-lock.json  package.json
apps/issue-19/: README.md  index.html  manifest.webmanifest  package-lock.json  package.json  sw.js
apps/issue-2/: .gitignore  README.md  pyproject.toml  requirements.txt
apps/issue-2/src/pixel_render/: __init__.py  cli.py
apps/issue-2/tests/: test_cli.py
apps/issue-27/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
apps/issue-3/: .gitignore  README.md  requirements.txt  test_real_data.py
apps/issue-35/: README.md  index.html  manifest.webmanifest  package-lock.json  package.json  sw.js
apps/issue-36/: README.md  package-lock.json  package.json
apps/issue-42/: README.md  package-lock.json  package.json  tsconfig.json
apps/issue-45/: README.md  index.html  manifest.webmanifest  package-lock.json  package.json  sw.js
scripts/: manage_issues.py  test_triage_check.py  triage_check.py
tasks/: todo.md
(+234 files in other folders)
